--- a/utils/output_texts.yaml
+++ b/utils/output_texts.yaml
@@ -4,6 +4,10 @@ output-texts:
     information: "{{ translate.information }}"
     success: "{{ translate.success }}"
     error: "{{ translate.error }}"
-    no-git-repo: "No git remote repo was configured.  Please configure one."
+    
     format-error: "The format parameter can only be 'json' or 'yaml'"
     internal-error: "An internal error occurred, please see logs for more detail"
+
+    storage.no-git-repo: "No git remote repo was configured.  Please configure one.  Please see logs for more detail"
+    storage.no-git-credentials: "The git repo configured uses the 'git@' protocol, but no git credentials have been configured."
+    
