--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = threatware-samadhicsecurity
+name = threatware
 version = 0.9.0
 author = samadhicsecurity
 author_email = dave@samadhicsecurity.com
@@ -12,8 +12,10 @@ project_urls =
     Tracker = https://github.com/samadhicsec/threatware/issues
 classifiers =
     Programming Language :: Python :: 3.9
+    Development Status :: 4 - Beta
     License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
+    Topic :: Security
 
 [options]
 packages = find:
