--- a/verifiers/verifiers_texts.yaml
+++ b/verifiers/verifiers_texts.yaml
@@ -7,7 +7,7 @@ output-texts:
     location-text: "In {{ issue_table }}"
     entry-text: "Where '{{ issue_key.rowID.colname }}' column has value '{{ issue_key.rowID.value }}'"
     no-covering-threat: "No threat was found in the '{{ threats_and_controls_table }}' that covered the asset '{{ issue_key.value }}' (from the '{{ issue_key.table }}') when stored in location '{{ storage_location }}'."
-    no-covering-threat-fix: "The {{ threats_and_controls_table }} must include a row where the '{{ asset_key.colname }}' column includes one of; the asset name i.e. '{{ issue_key.value }}', the asset type i.e. '{{ issue_key.row.type.value }}', or text referencing (see fix data) the storage location i.e. '{{ storage_location }}'"
+    no-covering-threat-fix: "The {{ threats_and_controls_table }} must include a row where the '{{ asset_key.colname }}' column includes one of; the asset name i.e. '{{ issue_key.value }}', the asset category i.e. '{{ issue_key.row.category.value }}', or text referencing (see fix data) the storage location i.e. '{{ storage_location }}'"
     missing-mandatory: "A value for the column '{{ issue_key.colname }}' is mandatory"
     missing-conditional-mandatory: "The value for the field '{{ depends_on_key.colname }}' is '{{ depends_on_key.value }}', so a value for the field '{{ issue_key.colname }}' is mandatory"
     missing-conditional-mandatory-any-value: "A value for the field '{{ depends_on_key.colname }}' exists, so a value for the field '{{ issue_key.colname }}' is mandatory"
