Improved error for unknown scheme

--- a/utils/output_texts.yaml
+++ b/utils/output_texts.yaml
@@ -8,7 +8,9 @@ output-texts:
     format-error: "The format parameter can only be 'json' or 'yaml'"
     internal-error: "An internal error occurred, please see logs for more detail"
 
+    scheme.unknown-scheme: "No scheme file for '{{ request.scheme }}' found.  Known schemes are: {{ scheme.known_schemes }}"
+
     storage.no-git-repo: "No git remote repo was configured.  Please configure one.  Please see logs for more detail"
     storage.no-git-credentials: "The git repo configured uses the 'git@' protocol, but no git credentials have been configured."
-    storage.clone-error: "There was an error cloning '{{ storage.remote }}'"
+    storage.clone-error: "There was an error executing git clone on '{{ storage.remote }}'"
     
