--- a/schemes/confluence-scheme-1.0.yaml
+++ b/schemes/confluence-scheme-1.0.yaml
@@ -35,6 +35,7 @@ scheme:
                 name: "document-name"
                 tags:
                   - document-title
+                  - version-meta
               value: 
                 get-data:
                   query:
@@ -59,6 +60,7 @@ scheme:
                     type: html-table-row
                     column-num: 3
           output-data:
+            type: dict
             post-processor:
               remove-header-row:
       - key: 
@@ -66,6 +68,7 @@ scheme:
           section: Version History Table
           tags:
             - version-history-data
+            - version-meta/document-details-data/approved-version
         value: 
           get-data:
             - query:
@@ -158,9 +161,9 @@ scheme:
       - key: 
           name: scope
           section: Scope Table
+          tags:
+            - version-meta
         value:
-          meta:
-            friendly-name: "Scope Table"
           get-data:
             - query:
                 type: html-table
@@ -211,6 +214,7 @@ scheme:
                   - key: "3rd Party"
                     value:
           output-data:
+            type: dict
             post-processor:
               remove-header-row:
       - key: 
