--- a/verifiers/verifiers_dispatch.yaml
+++ b/verifiers/verifiers_dispatch.yaml
@@ -2,7 +2,8 @@
 verifiers-dispatch:
   field-validation-uniqueness: "verifiers.field_validation_uniqueness"
   field-validation-mandatory: "verifiers.field_validation_mandatory"
-  field-validation-conditional-mandatory: "verifiers.field_validation_conditional_mandatory"
+  #field-validation-conditional-mandatory: "verifiers.field_validation_conditional_mandatory"
+  field-validation-conditional: "verifiers.field_validation_conditional"
   field-validation-value: "verifiers.field_validation_value"
   reference-validation: "verifiers.reference_validation"
   coverage-validation: "verifiers.coverage_validation"
