--- a/verifiers/verifiers_texts.yaml
+++ b/verifiers/verifiers_texts.yaml
@@ -9,8 +9,11 @@ output-texts:
     no-covering-threat: "No threat was found in the '{{ threats_and_controls_table }}' that covered the asset '{{ issue_key.value }}' (from the '{{ issue_key.table }}') when stored in location '{{ storage_location }}'."
     no-covering-threat-fix: "The {{ threats_and_controls_table }} must include a row where the '{{ asset_key.colname }}' column includes one of; the asset name i.e. '{{ issue_key.value }}', the asset category i.e. '{{ issue_key.row.category.value }}', or text referencing (see fix data) the storage location i.e. '{{ storage_location }}'"
     missing-mandatory: "A value for the column '{{ issue_key.colname }}' is mandatory"
-    missing-conditional-mandatory: "The value for the field '{{ depends_on_key.colname }}' is '{{ depends_on_key.value }}', so a value for the field '{{ issue_key.colname }}' is mandatory"
-    missing-conditional-mandatory-any-value: "A value for the field '{{ depends_on_key.colname }}' exists, so a value for the field '{{ issue_key.colname }}' is mandatory"
+    conditional-mandatory: "The value for the field '{{ if_key.colname }}' is '{{ if_key.value }}', so a value for the field '{{ then_key.colname }}' is mandatory"
+    conditional-mandatory-any-value: "A value for the field '{{ if_key.colname }}' exists, so a value for the field '{{ then_key.colname }}' is mandatory"
+    conditional-is-empty: "If '{{ if_key.colname }}' is empty then '{{ then_key.colname }}' must also be empty"
+    conditional-authnz-na: "If '{{ if_key.colname }}' is '{{ if_key.value }}' then '{{ then_key.colname }}' must also not be '{{ if_key.value }}'."
+    conditional-authnz-na-fix: "If there is no '{{ if_key.colname }}' but there is '{{ then_key.colname }}' then by convention we set '{{ if_key.colname }}' to '{{ translate.none }}'"
     document-unique: "The value '{{ entryvalue }}' in field '{{ entryname }}' must be unique in the document amongst the following section/field name pairs - {}.  Duplicate value(s) were found in the following section/field name pairs - {}"
     not-unique: "The '{{ issue_key.colname }}' column with value '{{ issue_key.value }}' must be unique.  See error-data for locations with the same values"
     not-unique-fix: "The value must be unique so it can be used throughout the document without confusion about what is being referred to.  You can change the value at either location to make it unique.  See fixdata for the locations it must be unique with respect to" 
