Removed google-fication of reference links

--- a/schemes/googledoc-scheme-1.0.yaml
+++ b/schemes/googledoc-scheme-1.0.yaml
@@ -243,9 +243,15 @@ scheme:
             - key: "URL"
               value:
                 get-data:
-                  query:
-                    type: html-text
-                    xpath: ".//a/@href"
+                  - query:
+                      type: html-text
+                      xpath: ".//a/@href"
+                  # href in a google doc gets converted to a Google link, so we remove that
+                  - query:
+                      type: value-extract
+                      regex: "^https\\:\\/\\/www\\.google\\.com\\/url\\?q\\=([^&]*)&.*$"
+                  - query:
+                      type: value-urldecode
       - key: components
         value:
           map-data:
